force-app/main/default/objects/Campaign/fields/Amount_to_Goal__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_Goal__c</fullName>
    <description>Formula field showing the Amount left towards the Campaign&apos;s Expected Revenue</description>
    <formula>IF( 
   NOT(ISBLANK(ExpectedRevenue)),
      ExpectedRevenue - AmountWonOpportunities,
      0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field showing the Amount left towards the Campaign&apos;s Expected Revenue</inlineHelpText>
    <label>Amount to Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>