force-app/main/default/objects/Campaign/fields/GFW_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>GFW_Campaign_ID__c</fullName>
    <description>Id of campaign record in GFW db.</description>
    <externalId>true</externalId>
    <label>GFW Campaign ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>