force-app/main/default/objects/Campaign/recordTypes/Fundraising.recordType-meta.xml
<RecordType>
    <fullName>Fundraising</fullName>
    <active>true</active>
    <description>Use this Record Type for fundraising activities</description>
    <label>Fundraising</label>
</RecordType>